- fixed window cycling with single key shortcut
- fixed WPrefs crash on menu editor
- install only needed icons for WPrefs.app
- updated Finnish translations
- fixed user-whining-windoze-cycling bug
- added option for f'n windoze cycling..
- added --create-stdcmap and made std colormap creation off by default
- updated get/setstyle to account for new options

Changes since version 0.61.1:
.............................

- fixed bug with menu editor in WPrefs placing cut/paste-ed entries in wrong
  positions.
- removed "Keep Attracted Icons" option from Clip's menu. See NEWS.
- fixed bug in Xdnd code to be able to work with QT. (This is QT's bug so
  it will change again in future)
- replaced debugging output stuff with Nana
- fixed problem with session restoring and dock autolaunch (Jacek Naglak
							<nag@promail.pl>)
- put WorkspaceNamePosition in WPrefs
- added a lock to docked icons
- fixed crashing bug in WPrefs.app's Appearance section.
- fixed sorting of names in icon chooser, and file browser.
- fixed name completion problem in file browser.
- added new sound events (from pascal)
- fixed bug when moving/resizing internal windows
- propagation of -noext for submenus (David Reviejo <dreviejo@arrakis.es>)
- fixed problem with mouse sampling rate in SGIs
- optimized frame drawing (Swivel <swivel@gnugeneration.com>)
- removed broken optimized frame drawing patch
- added Select Window button in attribute inspector
- made icon images scale by a constant factor when changing icon size
- added support for standard colormaps in PseudoColor visuals
- changed geometry view for move/resize to a WINGs widget
- removed DisplayFont option
- added NoBorder attribute
- changed semantics of GNUstep window attribute hints
- added get-wings-flags and get-wutil-flags with the same purpose as
  get-wraster-flags, but for compiling and linking with WINGs/WUtil
- fixed bug handling non-string values given to string valued options in 
  defaults.c