@@ -100,7 +100,7 @@ dnl not used anywhere
 dnl AC_FUNC_MEMCMP  
 AC_FUNC_VPRINTF
 AC_FUNC_ALLOCA
-AC_CHECK_FUNCS(gethostname select poll strerror strncasecmp setpgid atexit)
+AC_CHECK_FUNCS(gethostname select poll strerror strncasecmp setpgid atexit mallinfo)
 
 
 
@@ -153,7 +153,7 @@ dnl AC_HEADER_STDC
 AC_HEADER_SYS_WAIT
 AC_HEADER_TIME
 AC_CHECK_HEADERS(fcntl.h limits.h sys/ioctl.h sys/time.h sys/types.h\
-		libintl.h sys/select.h poll.h)
+		libintl.h sys/select.h poll.h malloc.h)
 
 
 
